[package]
name = "von"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "1.9.3"
serde = "1.0.160"
pex = "0.0.6"

[dev-dependencies]
serde_json = "1.0.96"

[features]
default = []
